// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedNotificationsSystemsTable should render correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <SystemsTableWithContext
        createBaselineModal={false}
        entities={
          Object {
            "columns": Array [
              Object {
                "key": "display_name",
                "title": "Name",
              },
              Object {
                "key": "tags",
                "title": "Tags",
              },
              Object {
                "key": "updated",
                "title": "Last seen",
              },
              Object {
                "key": "historical_profiles",
                "title": "Historical profiles",
              },
            ],
            "count": 3,
            "rows": Array [
              Object {
                "id": "ec67f65c-2bc8-4ce8-82e2-6a27cada8d31",
                "tags": Array [
                  Object {
                    "key": "group",
                    "namespace": "insights-client",
                    "value": "XmygroupX",
                  },
                ],
                "updated": "2020-10-13T16:17:56.253419+00:00",
              },
              Object {
                "id": "7672c0c3-db27-4b59-ace9-5724d5a2dd1b",
                "tags": Array [
                  Object {
                    "key": "group",
                    "namespace": "insights-client",
                    "value": "XmygroupX",
                  },
                ],
                "updated": "2020-10-13T16:17:54.952780+00:00",
              },
              Object {
                "id": "45ef6cea-b80f-46b6-90fc-00363a6f3b70",
                "tags": Array [
                  Object {
                    "key": "group",
                    "namespace": "insights-client",
                    "value": "XmygroupX",
                  },
                ],
                "updated": "2020-10-13T16:17:54.686193+00:00",
              },
            ],
            "selectedSystemIds": Array [],
            "total": 3,
          }
        }
        hasHistoricalDropdown={false}
        hasMultiSelect={true}
        historicalProfiles={Array []}
        permissions={
          Object {
            "inventoryRead": true,
            "notificationsWrite": true,
          }
        }
        selectVariant="checkbox"
        selectedSystemIds={Array []}
        toolbarButton={
          <Button
            isDisabled={false}
            onClick={[MockFunction]}
            ouiaId="add-baseline-notification-button"
            variant="primary"
          >
            Add system
          </Button>
        }
      >
        <Provider
          store={
            Object {
              "@@observable": [Function],
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
            }
          }
        >
          <Connect(Component)
            addNewListener={[Function]}
            createBaselineModal={false}
            entities={
              Object {
                "columns": Array [
                  Object {
                    "key": "display_name",
                    "title": "Name",
                  },
                  Object {
                    "key": "tags",
                    "title": "Tags",
                  },
                  Object {
                    "key": "updated",
                    "title": "Last seen",
                  },
                  Object {
                    "key": "historical_profiles",
                    "title": "Historical profiles",
                  },
                ],
                "count": 3,
                "rows": Array [
                  Object {
                    "id": "ec67f65c-2bc8-4ce8-82e2-6a27cada8d31",
                    "tags": Array [
                      Object {
                        "key": "group",
                        "namespace": "insights-client",
                        "value": "XmygroupX",
                      },
                    ],
                    "updated": "2020-10-13T16:17:56.253419+00:00",
                  },
                  Object {
                    "id": "7672c0c3-db27-4b59-ace9-5724d5a2dd1b",
                    "tags": Array [
                      Object {
                        "key": "group",
                        "namespace": "insights-client",
                        "value": "XmygroupX",
                      },
                    ],
                    "updated": "2020-10-13T16:17:54.952780+00:00",
                  },
                  Object {
                    "id": "45ef6cea-b80f-46b6-90fc-00363a6f3b70",
                    "tags": Array [
                      Object {
                        "key": "group",
                        "namespace": "insights-client",
                        "value": "XmygroupX",
                      },
                    ],
                    "updated": "2020-10-13T16:17:54.686193+00:00",
                  },
                ],
                "selectedSystemIds": Array [],
                "total": 3,
              }
            }
            hasHistoricalDropdown={false}
            hasMultiSelect={true}
            historicalProfiles={Array []}
            permissions={
              Object {
                "inventoryRead": true,
                "notificationsWrite": true,
              }
            }
            registry={
              ReducerRegistry {
                "reducers": Object {},
                "store": Object {
                  "@@observable": [Function],
                  "dispatch": [Function],
                  "getState": [Function],
                  "replaceReducer": [Function],
                  "subscribe": [Function],
                },
              }
            }
            selectVariant="checkbox"
            selectedSystemIds={Array []}
            toolbarButton={
              <Button
                isDisabled={false}
                onClick={[MockFunction]}
                ouiaId="add-baseline-notification-button"
                variant="primary"
              >
                Add system
              </Button>
            }
          >
            <Component
              addNewListener={[Function]}
              createBaselineModal={false}
              driftClearFilters={[Function]}
              entities={
                Object {
                  "columns": Array [
                    Object {
                      "key": "display_name",
                      "title": "Name",
                    },
                    Object {
                      "key": "tags",
                      "title": "Tags",
                    },
                    Object {
                      "key": "updated",
                      "title": "Last seen",
                    },
                    Object {
                      "key": "historical_profiles",
                      "title": "Historical profiles",
                    },
                  ],
                  "count": 3,
                  "rows": Array [
                    Object {
                      "id": "ec67f65c-2bc8-4ce8-82e2-6a27cada8d31",
                      "tags": Array [
                        Object {
                          "key": "group",
                          "namespace": "insights-client",
                          "value": "XmygroupX",
                        },
                      ],
                      "updated": "2020-10-13T16:17:56.253419+00:00",
                    },
                    Object {
                      "id": "7672c0c3-db27-4b59-ace9-5724d5a2dd1b",
                      "tags": Array [
                        Object {
                          "key": "group",
                          "namespace": "insights-client",
                          "value": "XmygroupX",
                        },
                      ],
                      "updated": "2020-10-13T16:17:54.952780+00:00",
                    },
                    Object {
                      "id": "45ef6cea-b80f-46b6-90fc-00363a6f3b70",
                      "tags": Array [
                        Object {
                          "key": "group",
                          "namespace": "insights-client",
                          "value": "XmygroupX",
                        },
                      ],
                      "updated": "2020-10-13T16:17:54.686193+00:00",
                    },
                  ],
                  "selectedSystemIds": Array [],
                  "total": 3,
                }
              }
              hasHistoricalDropdown={false}
              hasMultiSelect={true}
              historicalProfiles={Array []}
              permissions={
                Object {
                  "inventoryRead": true,
                  "notificationsWrite": true,
                }
              }
              registry={
                ReducerRegistry {
                  "reducers": Object {},
                  "store": Object {
                    "@@observable": [Function],
                    "dispatch": [Function],
                    "getState": [Function],
                    "replaceReducer": [Function],
                    "subscribe": [Function],
                  },
                }
              }
              selectEntities={[Function]}
              selectVariant="checkbox"
              selectedSystemIds={Array []}
              setSelectedSystemIds={[Function]}
              toolbarButton={
                <Button
                  isDisabled={false}
                  onClick={[MockFunction]}
                  ouiaId="add-baseline-notification-button"
                  variant="primary"
                >
                  Add system
                </Button>
              }
            >
              <ForwardRef
                actionsConfig={
                  Object {
                    "actions": Array [
                      <Button
                        isDisabled={false}
                        onClick={[MockFunction]}
                        ouiaId="add-baseline-notification-button"
                        variant="primary"
                      >
                        Add system
                      </Button>,
                      Object {
                        "label": "Delete associated system",
                        "onClick": [Function],
                        "props": Object {
                          "className": "pointer",
                          "isDisabled": true,
                          "key": "delete-baseline-notification",
                        },
                      },
                    ],
                  }
                }
                bulkSelect={
                  Object {
                    "checked": null,
                    "count": undefined,
                    "id": "notifications-system-bulk-select",
                    "isDisabled": false,
                    "items": Array [
                      Object {
                        "onClick": [Function],
                        "title": "Select none (0)",
                      },
                      Object {
                        "onClick": [Function],
                        "title": "Select page (0)",
                      },
                      Object {
                        "onClick": [Function],
                        "title": "Select all (undefined)",
                      },
                    ],
                    "onSelect": [Function],
                    "toggleProps": null,
                  }
                }
                component="section"
                customFilters={
                  Object {
                    "filter": Object {
                      "system_profile": Object {},
                    },
                    "tags": undefined,
                  }
                }
                fallback={
                  <Bullseye
                    className="pf-u-p-lg"
                  >
                    <Spinner
                      size="xl"
                    />
                  </Bullseye>
                }
                getEntities={[Function]}
                noDetail={true}
                onLoad={[Function]}
                showTags={true}
                tableProps={
                  Object {
                    "canSelectAll": false,
                    "isStickyHeader": true,
                    "ouiaId": "systems-table",
                    "selectVariant": "checkbox",
                  }
                }
              >
                <BaseInvTable
                  actionsConfig={
                    Object {
                      "actions": Array [
                        <Button
                          isDisabled={false}
                          onClick={[MockFunction]}
                          ouiaId="add-baseline-notification-button"
                          variant="primary"
                        >
                          Add system
                        </Button>,
                        Object {
                          "label": "Delete associated system",
                          "onClick": [Function],
                          "props": Object {
                            "className": "pointer",
                            "isDisabled": true,
                            "key": "delete-baseline-notification",
                          },
                        },
                      ],
                    }
                  }
                  bulkSelect={
                    Object {
                      "checked": null,
                      "count": undefined,
                      "id": "notifications-system-bulk-select",
                      "isDisabled": false,
                      "items": Array [
                        Object {
                          "onClick": [Function],
                          "title": "Select none (0)",
                        },
                        Object {
                          "onClick": [Function],
                          "title": "Select page (0)",
                        },
                        Object {
                          "onClick": [Function],
                          "title": "Select all (undefined)",
                        },
                      ],
                      "onSelect": [Function],
                      "toggleProps": null,
                    }
                  }
                  component="section"
                  customFilters={
                    Object {
                      "filter": Object {
                        "system_profile": Object {},
                      },
                      "tags": undefined,
                    }
                  }
                  fallback={
                    <Bullseye
                      className="pf-u-p-lg"
                    >
                      <Spinner
                        size="xl"
                      />
                    </Bullseye>
                  }
                  getEntities={[Function]}
                  innerRef={null}
                  noDetail={true}
                  onLoad={[Function]}
                  showTags={true}
                  tableProps={
                    Object {
                      "canSelectAll": false,
                      "isStickyHeader": true,
                      "ouiaId": "systems-table",
                      "selectVariant": "checkbox",
                    }
                  }
                >
                  <section
                    className="inventory"
                  >
                    <Suspense
                      fallback={
                        <Bullseye
                          className="pf-u-p-lg"
                        >
                          <Spinner
                            size="xl"
                          />
                        </Bullseye>
                      }
                    >
                      <ForwardRef
                        ErrorComponent={
                          <InventoryLoadError
                            actionsConfig={
                              Object {
                                "actions": Array [
                                  <Button
                                    isDisabled={false}
                                    onClick={[MockFunction]}
                                    ouiaId="add-baseline-notification-button"
                                    variant="primary"
                                  >
                                    Add system
                                  </Button>,
                                  Object {
                                    "label": "Delete associated system",
                                    "onClick": [Function],
                                    "props": Object {
                                      "className": "pointer",
                                      "isDisabled": true,
                                      "key": "delete-baseline-notification",
                                    },
                                  },
                                ],
                              }
                            }
                            bulkSelect={
                              Object {
                                "checked": null,
                                "count": undefined,
                                "id": "notifications-system-bulk-select",
                                "isDisabled": false,
                                "items": Array [
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select none (0)",
                                  },
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select page (0)",
                                  },
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select all (undefined)",
                                  },
                                ],
                                "onSelect": [Function],
                                "toggleProps": null,
                              }
                            }
                            component="section"
                            customFilters={
                              Object {
                                "filter": Object {
                                  "system_profile": Object {},
                                },
                                "tags": undefined,
                              }
                            }
                            fallback={
                              <Bullseye
                                className="pf-u-p-lg"
                              >
                                <Spinner
                                  size="xl"
                                />
                              </Bullseye>
                            }
                            getEntities={[Function]}
                            history={
                              Object {
                                "action": "POP",
                                "block": [Function],
                                "canGo": [Function],
                                "createHref": [Function],
                                "entries": Array [
                                  Object {
                                    "hash": "",
                                    "pathname": "/",
                                    "search": "",
                                    "state": undefined,
                                  },
                                ],
                                "go": [Function],
                                "goBack": [Function],
                                "goForward": [Function],
                                "index": 0,
                                "length": 1,
                                "listen": [Function],
                                "location": Object {
                                  "hash": "",
                                  "pathname": "/",
                                  "search": "",
                                  "state": undefined,
                                },
                                "push": [Function],
                                "replace": [Function],
                              }
                            }
                            innerRef={null}
                            noDetail={true}
                            onLoad={[Function]}
                            showTags={true}
                            store={
                              Object {
                                "@@observable": [Function],
                                "dispatch": [Function],
                                "getState": [Function],
                                "replaceReducer": [Function],
                                "subscribe": [Function],
                              }
                            }
                            tableProps={
                              Object {
                                "canSelectAll": false,
                                "isStickyHeader": true,
                                "ouiaId": "systems-table",
                                "selectVariant": "checkbox",
                              }
                            }
                          />
                        }
                        actionsConfig={
                          Object {
                            "actions": Array [
                              <Button
                                isDisabled={false}
                                onClick={[MockFunction]}
                                ouiaId="add-baseline-notification-button"
                                variant="primary"
                              >
                                Add system
                              </Button>,
                              Object {
                                "label": "Delete associated system",
                                "onClick": [Function],
                                "props": Object {
                                  "className": "pointer",
                                  "isDisabled": true,
                                  "key": "delete-baseline-notification",
                                },
                              },
                            ],
                          }
                        }
                        appName="inventory"
                        bulkSelect={
                          Object {
                            "checked": null,
                            "count": undefined,
                            "id": "notifications-system-bulk-select",
                            "isDisabled": false,
                            "items": Array [
                              Object {
                                "onClick": [Function],
                                "title": "Select none (0)",
                              },
                              Object {
                                "onClick": [Function],
                                "title": "Select page (0)",
                              },
                              Object {
                                "onClick": [Function],
                                "title": "Select all (undefined)",
                              },
                            ],
                            "onSelect": [Function],
                            "toggleProps": null,
                          }
                        }
                        component="section"
                        customFilters={
                          Object {
                            "filter": Object {
                              "system_profile": Object {},
                            },
                            "tags": undefined,
                          }
                        }
                        fallback={
                          <Bullseye
                            className="pf-u-p-lg"
                          >
                            <Spinner
                              size="xl"
                            />
                          </Bullseye>
                        }
                        getEntities={[Function]}
                        history={
                          Object {
                            "action": "POP",
                            "block": [Function],
                            "canGo": [Function],
                            "createHref": [Function],
                            "entries": Array [
                              Object {
                                "hash": "",
                                "pathname": "/",
                                "search": "",
                                "state": undefined,
                              },
                            ],
                            "go": [Function],
                            "goBack": [Function],
                            "goForward": [Function],
                            "index": 0,
                            "length": 1,
                            "listen": [Function],
                            "location": Object {
                              "hash": "",
                              "pathname": "/",
                              "search": "",
                              "state": undefined,
                            },
                            "push": [Function],
                            "replace": [Function],
                          }
                        }
                        innerRef={null}
                        module="./InventoryTable"
                        noDetail={true}
                        onLoad={[Function]}
                        scope="inventory"
                        showTags={true}
                        store={
                          Object {
                            "@@observable": [Function],
                            "dispatch": [Function],
                            "getState": [Function],
                            "replaceReducer": [Function],
                            "subscribe": [Function],
                          }
                        }
                        tableProps={
                          Object {
                            "canSelectAll": false,
                            "isStickyHeader": true,
                            "ouiaId": "systems-table",
                            "selectVariant": "checkbox",
                          }
                        }
                      >
                        <BaseScalprumComponent
                          ErrorComponent={
                            <InventoryLoadError
                              actionsConfig={
                                Object {
                                  "actions": Array [
                                    <Button
                                      isDisabled={false}
                                      onClick={[MockFunction]}
                                      ouiaId="add-baseline-notification-button"
                                      variant="primary"
                                    >
                                      Add system
                                    </Button>,
                                    Object {
                                      "label": "Delete associated system",
                                      "onClick": [Function],
                                      "props": Object {
                                        "className": "pointer",
                                        "isDisabled": true,
                                        "key": "delete-baseline-notification",
                                      },
                                    },
                                  ],
                                }
                              }
                              bulkSelect={
                                Object {
                                  "checked": null,
                                  "count": undefined,
                                  "id": "notifications-system-bulk-select",
                                  "isDisabled": false,
                                  "items": Array [
                                    Object {
                                      "onClick": [Function],
                                      "title": "Select none (0)",
                                    },
                                    Object {
                                      "onClick": [Function],
                                      "title": "Select page (0)",
                                    },
                                    Object {
                                      "onClick": [Function],
                                      "title": "Select all (undefined)",
                                    },
                                  ],
                                  "onSelect": [Function],
                                  "toggleProps": null,
                                }
                              }
                              component="section"
                              customFilters={
                                Object {
                                  "filter": Object {
                                    "system_profile": Object {},
                                  },
                                  "tags": undefined,
                                }
                              }
                              fallback={
                                <Bullseye
                                  className="pf-u-p-lg"
                                >
                                  <Spinner
                                    size="xl"
                                  />
                                </Bullseye>
                              }
                              getEntities={[Function]}
                              history={
                                Object {
                                  "action": "POP",
                                  "block": [Function],
                                  "canGo": [Function],
                                  "createHref": [Function],
                                  "entries": Array [
                                    Object {
                                      "hash": "",
                                      "pathname": "/",
                                      "search": "",
                                      "state": undefined,
                                    },
                                  ],
                                  "go": [Function],
                                  "goBack": [Function],
                                  "goForward": [Function],
                                  "index": 0,
                                  "length": 1,
                                  "listen": [Function],
                                  "location": Object {
                                    "hash": "",
                                    "pathname": "/",
                                    "search": "",
                                    "state": undefined,
                                  },
                                  "push": [Function],
                                  "replace": [Function],
                                }
                              }
                              innerRef={null}
                              noDetail={true}
                              onLoad={[Function]}
                              showTags={true}
                              store={
                                Object {
                                  "@@observable": [Function],
                                  "dispatch": [Function],
                                  "getState": [Function],
                                  "replaceReducer": [Function],
                                  "subscribe": [Function],
                                }
                              }
                              tableProps={
                                Object {
                                  "canSelectAll": false,
                                  "isStickyHeader": true,
                                  "ouiaId": "systems-table",
                                  "selectVariant": "checkbox",
                                }
                              }
                            />
                          }
                          actionsConfig={
                            Object {
                              "actions": Array [
                                <Button
                                  isDisabled={false}
                                  onClick={[MockFunction]}
                                  ouiaId="add-baseline-notification-button"
                                  variant="primary"
                                >
                                  Add system
                                </Button>,
                                Object {
                                  "label": "Delete associated system",
                                  "onClick": [Function],
                                  "props": Object {
                                    "className": "pointer",
                                    "isDisabled": true,
                                    "key": "delete-baseline-notification",
                                  },
                                },
                              ],
                            }
                          }
                          appName="inventory"
                          bulkSelect={
                            Object {
                              "checked": null,
                              "count": undefined,
                              "id": "notifications-system-bulk-select",
                              "isDisabled": false,
                              "items": Array [
                                Object {
                                  "onClick": [Function],
                                  "title": "Select none (0)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Select page (0)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Select all (undefined)",
                                },
                              ],
                              "onSelect": [Function],
                              "toggleProps": null,
                            }
                          }
                          component="section"
                          customFilters={
                            Object {
                              "filter": Object {
                                "system_profile": Object {},
                              },
                              "tags": undefined,
                            }
                          }
                          fallback={
                            <Bullseye
                              className="pf-u-p-lg"
                            >
                              <Spinner
                                size="xl"
                              />
                            </Bullseye>
                          }
                          getEntities={[Function]}
                          history={
                            Object {
                              "action": "POP",
                              "block": [Function],
                              "canGo": [Function],
                              "createHref": [Function],
                              "entries": Array [
                                Object {
                                  "hash": "",
                                  "pathname": "/",
                                  "search": "",
                                  "state": undefined,
                                },
                              ],
                              "go": [Function],
                              "goBack": [Function],
                              "goForward": [Function],
                              "index": 0,
                              "length": 1,
                              "listen": [Function],
                              "location": Object {
                                "hash": "",
                                "pathname": "/",
                                "search": "",
                                "state": undefined,
                              },
                              "push": [Function],
                              "replace": [Function],
                            }
                          }
                          innerRef={null}
                          module="./InventoryTable"
                          noDetail={true}
                          onLoad={[Function]}
                          scope="inventory"
                          showTags={true}
                          store={
                            Object {
                              "@@observable": [Function],
                              "dispatch": [Function],
                              "getState": [Function],
                              "replaceReducer": [Function],
                              "subscribe": [Function],
                            }
                          }
                          tableProps={
                            Object {
                              "canSelectAll": false,
                              "isStickyHeader": true,
                              "ouiaId": "systems-table",
                              "selectVariant": "checkbox",
                            }
                          }
                        >
                          <LoadModule
                            ErrorComponent={[Function]}
                            actionsConfig={
                              Object {
                                "actions": Array [
                                  <Button
                                    isDisabled={false}
                                    onClick={[MockFunction]}
                                    ouiaId="add-baseline-notification-button"
                                    variant="primary"
                                  >
                                    Add system
                                  </Button>,
                                  Object {
                                    "label": "Delete associated system",
                                    "onClick": [Function],
                                    "props": Object {
                                      "className": "pointer",
                                      "isDisabled": true,
                                      "key": "delete-baseline-notification",
                                    },
                                  },
                                ],
                              }
                            }
                            appName="inventory"
                            bulkSelect={
                              Object {
                                "checked": null,
                                "count": undefined,
                                "id": "notifications-system-bulk-select",
                                "isDisabled": false,
                                "items": Array [
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select none (0)",
                                  },
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select page (0)",
                                  },
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select all (undefined)",
                                  },
                                ],
                                "onSelect": [Function],
                                "toggleProps": null,
                              }
                            }
                            component="section"
                            customFilters={
                              Object {
                                "filter": Object {
                                  "system_profile": Object {},
                                },
                                "tags": undefined,
                              }
                            }
                            fallback={
                              <Bullseye
                                className="pf-u-p-lg"
                              >
                                <Spinner
                                  size="xl"
                                />
                              </Bullseye>
                            }
                            getEntities={[Function]}
                            history={
                              Object {
                                "action": "POP",
                                "block": [Function],
                                "canGo": [Function],
                                "createHref": [Function],
                                "entries": Array [
                                  Object {
                                    "hash": "",
                                    "pathname": "/",
                                    "search": "",
                                    "state": undefined,
                                  },
                                ],
                                "go": [Function],
                                "goBack": [Function],
                                "goForward": [Function],
                                "index": 0,
                                "length": 1,
                                "listen": [Function],
                                "location": Object {
                                  "hash": "",
                                  "pathname": "/",
                                  "search": "",
                                  "state": undefined,
                                },
                                "push": [Function],
                                "replace": [Function],
                              }
                            }
                            innerRef={null}
                            module="./InventoryTable"
                            noDetail={true}
                            onLoad={[Function]}
                            scope="inventory"
                            showTags={true}
                            store={
                              Object {
                                "@@observable": [Function],
                                "dispatch": [Function],
                                "getState": [Function],
                                "replaceReducer": [Function],
                                "subscribe": [Function],
                              }
                            }
                            tableProps={
                              Object {
                                "canSelectAll": false,
                                "isStickyHeader": true,
                                "ouiaId": "systems-table",
                                "selectVariant": "checkbox",
                              }
                            }
                          >
                            <Suspense
                              fallback={
                                <Bullseye
                                  className="pf-u-p-lg"
                                >
                                  <Spinner
                                    size="xl"
                                  />
                                </Bullseye>
                              }
                            >
                              <_default
                                actionsConfig={
                                  Object {
                                    "actions": Array [
                                      <Button
                                        isDisabled={false}
                                        onClick={[MockFunction]}
                                        ouiaId="add-baseline-notification-button"
                                        variant="primary"
                                      >
                                        Add system
                                      </Button>,
                                      Object {
                                        "label": "Delete associated system",
                                        "onClick": [Function],
                                        "props": Object {
                                          "className": "pointer",
                                          "isDisabled": true,
                                          "key": "delete-baseline-notification",
                                        },
                                      },
                                    ],
                                  }
                                }
                                bulkSelect={
                                  Object {
                                    "checked": null,
                                    "count": undefined,
                                    "id": "notifications-system-bulk-select",
                                    "isDisabled": false,
                                    "items": Array [
                                      Object {
                                        "onClick": [Function],
                                        "title": "Select none (0)",
                                      },
                                      Object {
                                        "onClick": [Function],
                                        "title": "Select page (0)",
                                      },
                                      Object {
                                        "onClick": [Function],
                                        "title": "Select all (undefined)",
                                      },
                                    ],
                                    "onSelect": [Function],
                                    "toggleProps": null,
                                  }
                                }
                                component="section"
                                customFilters={
                                  Object {
                                    "filter": Object {
                                      "system_profile": Object {},
                                    },
                                    "tags": undefined,
                                  }
                                }
                                getEntities={[Function]}
                                history={
                                  Object {
                                    "action": "POP",
                                    "block": [Function],
                                    "canGo": [Function],
                                    "createHref": [Function],
                                    "entries": Array [
                                      Object {
                                        "hash": "",
                                        "pathname": "/",
                                        "search": "",
                                        "state": undefined,
                                      },
                                    ],
                                    "go": [Function],
                                    "goBack": [Function],
                                    "goForward": [Function],
                                    "index": 0,
                                    "length": 1,
                                    "listen": [Function],
                                    "location": Object {
                                      "hash": "",
                                      "pathname": "/",
                                      "search": "",
                                      "state": undefined,
                                    },
                                    "push": [Function],
                                    "replace": [Function],
                                  }
                                }
                                noDetail={true}
                                onLoad={[Function]}
                                showTags={true}
                                store={
                                  Object {
                                    "@@observable": [Function],
                                    "dispatch": [Function],
                                    "getState": [Function],
                                    "replaceReducer": [Function],
                                    "subscribe": [Function],
                                  }
                                }
                                tableProps={
                                  Object {
                                    "canSelectAll": false,
                                    "isStickyHeader": true,
                                    "ouiaId": "systems-table",
                                    "selectVariant": "checkbox",
                                  }
                                }
                              >
                                <div>
                                  <h1>
                                    Inventory mock
                                  </h1>
                                </div>
                              </_default>
                            </Suspense>
                          </LoadModule>
                        </BaseScalprumComponent>
                      </ForwardRef>
                    </Suspense>
                  </section>
                </BaseInvTable>
              </ForwardRef>
            </Component>
          </Connect(Component)>
        </Provider>
      </SystemsTableWithContext>
    </Provider>
  </Router>
</MemoryRouter>
`;

exports[`ConnectedNotificationsSystemsTable should render correctly with no inventoryWrite permissions 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <SystemsTableWithContext
        createBaselineModal={false}
        entities={
          Object {
            "columns": Array [
              Object {
                "key": "display_name",
                "title": "Name",
              },
              Object {
                "key": "tags",
                "title": "Tags",
              },
              Object {
                "key": "updated",
                "title": "Last seen",
              },
              Object {
                "key": "historical_profiles",
                "title": "Historical profiles",
              },
            ],
            "count": 3,
            "rows": Array [
              Object {
                "id": "ec67f65c-2bc8-4ce8-82e2-6a27cada8d31",
                "tags": Array [
                  Object {
                    "key": "group",
                    "namespace": "insights-client",
                    "value": "XmygroupX",
                  },
                ],
                "updated": "2020-10-13T16:17:56.253419+00:00",
              },
              Object {
                "id": "7672c0c3-db27-4b59-ace9-5724d5a2dd1b",
                "tags": Array [
                  Object {
                    "key": "group",
                    "namespace": "insights-client",
                    "value": "XmygroupX",
                  },
                ],
                "updated": "2020-10-13T16:17:54.952780+00:00",
              },
              Object {
                "id": "45ef6cea-b80f-46b6-90fc-00363a6f3b70",
                "tags": Array [
                  Object {
                    "key": "group",
                    "namespace": "insights-client",
                    "value": "XmygroupX",
                  },
                ],
                "updated": "2020-10-13T16:17:54.686193+00:00",
              },
            ],
            "selectedSystemIds": Array [],
            "total": 3,
          }
        }
        hasHistoricalDropdown={false}
        hasMultiSelect={true}
        historicalProfiles={Array []}
        permissions={
          Object {
            "inventoryRead": true,
            "notificationsWrite": false,
          }
        }
        selectVariant="checkbox"
        selectedSystemIds={Array []}
        toolbarButton={
          <Button
            isDisabled={false}
            onClick={[MockFunction]}
            ouiaId="add-baseline-notification-button"
            variant="primary"
          >
            Add system
          </Button>
        }
      >
        <Provider
          store={
            Object {
              "@@observable": [Function],
              "dispatch": [Function],
              "getState": [Function],
              "replaceReducer": [Function],
              "subscribe": [Function],
            }
          }
        >
          <Connect(Component)
            addNewListener={[Function]}
            createBaselineModal={false}
            entities={
              Object {
                "columns": Array [
                  Object {
                    "key": "display_name",
                    "title": "Name",
                  },
                  Object {
                    "key": "tags",
                    "title": "Tags",
                  },
                  Object {
                    "key": "updated",
                    "title": "Last seen",
                  },
                  Object {
                    "key": "historical_profiles",
                    "title": "Historical profiles",
                  },
                ],
                "count": 3,
                "rows": Array [
                  Object {
                    "id": "ec67f65c-2bc8-4ce8-82e2-6a27cada8d31",
                    "tags": Array [
                      Object {
                        "key": "group",
                        "namespace": "insights-client",
                        "value": "XmygroupX",
                      },
                    ],
                    "updated": "2020-10-13T16:17:56.253419+00:00",
                  },
                  Object {
                    "id": "7672c0c3-db27-4b59-ace9-5724d5a2dd1b",
                    "tags": Array [
                      Object {
                        "key": "group",
                        "namespace": "insights-client",
                        "value": "XmygroupX",
                      },
                    ],
                    "updated": "2020-10-13T16:17:54.952780+00:00",
                  },
                  Object {
                    "id": "45ef6cea-b80f-46b6-90fc-00363a6f3b70",
                    "tags": Array [
                      Object {
                        "key": "group",
                        "namespace": "insights-client",
                        "value": "XmygroupX",
                      },
                    ],
                    "updated": "2020-10-13T16:17:54.686193+00:00",
                  },
                ],
                "selectedSystemIds": Array [],
                "total": 3,
              }
            }
            hasHistoricalDropdown={false}
            hasMultiSelect={true}
            historicalProfiles={Array []}
            permissions={
              Object {
                "inventoryRead": true,
                "notificationsWrite": false,
              }
            }
            registry={
              ReducerRegistry {
                "reducers": Object {},
                "store": Object {
                  "@@observable": [Function],
                  "dispatch": [Function],
                  "getState": [Function],
                  "replaceReducer": [Function],
                  "subscribe": [Function],
                },
              }
            }
            selectVariant="checkbox"
            selectedSystemIds={Array []}
            toolbarButton={
              <Button
                isDisabled={false}
                onClick={[MockFunction]}
                ouiaId="add-baseline-notification-button"
                variant="primary"
              >
                Add system
              </Button>
            }
          >
            <Component
              addNewListener={[Function]}
              createBaselineModal={false}
              driftClearFilters={[Function]}
              entities={
                Object {
                  "columns": Array [
                    Object {
                      "key": "display_name",
                      "title": "Name",
                    },
                    Object {
                      "key": "tags",
                      "title": "Tags",
                    },
                    Object {
                      "key": "updated",
                      "title": "Last seen",
                    },
                    Object {
                      "key": "historical_profiles",
                      "title": "Historical profiles",
                    },
                  ],
                  "count": 3,
                  "rows": Array [
                    Object {
                      "id": "ec67f65c-2bc8-4ce8-82e2-6a27cada8d31",
                      "tags": Array [
                        Object {
                          "key": "group",
                          "namespace": "insights-client",
                          "value": "XmygroupX",
                        },
                      ],
                      "updated": "2020-10-13T16:17:56.253419+00:00",
                    },
                    Object {
                      "id": "7672c0c3-db27-4b59-ace9-5724d5a2dd1b",
                      "tags": Array [
                        Object {
                          "key": "group",
                          "namespace": "insights-client",
                          "value": "XmygroupX",
                        },
                      ],
                      "updated": "2020-10-13T16:17:54.952780+00:00",
                    },
                    Object {
                      "id": "45ef6cea-b80f-46b6-90fc-00363a6f3b70",
                      "tags": Array [
                        Object {
                          "key": "group",
                          "namespace": "insights-client",
                          "value": "XmygroupX",
                        },
                      ],
                      "updated": "2020-10-13T16:17:54.686193+00:00",
                    },
                  ],
                  "selectedSystemIds": Array [],
                  "total": 3,
                }
              }
              hasHistoricalDropdown={false}
              hasMultiSelect={true}
              historicalProfiles={Array []}
              permissions={
                Object {
                  "inventoryRead": true,
                  "notificationsWrite": false,
                }
              }
              registry={
                ReducerRegistry {
                  "reducers": Object {},
                  "store": Object {
                    "@@observable": [Function],
                    "dispatch": [Function],
                    "getState": [Function],
                    "replaceReducer": [Function],
                    "subscribe": [Function],
                  },
                }
              }
              selectEntities={[Function]}
              selectVariant="checkbox"
              selectedSystemIds={Array []}
              setSelectedSystemIds={[Function]}
              toolbarButton={
                <Button
                  isDisabled={false}
                  onClick={[MockFunction]}
                  ouiaId="add-baseline-notification-button"
                  variant="primary"
                >
                  Add system
                </Button>
              }
            >
              <ForwardRef
                actionsConfig={
                  Object {
                    "actions": Array [],
                  }
                }
                bulkSelect={
                  Object {
                    "checked": null,
                    "count": undefined,
                    "id": "notifications-system-bulk-select",
                    "isDisabled": false,
                    "items": Array [
                      Object {
                        "onClick": [Function],
                        "title": "Select none (0)",
                      },
                      Object {
                        "onClick": [Function],
                        "title": "Select page (0)",
                      },
                      Object {
                        "onClick": [Function],
                        "title": "Select all (undefined)",
                      },
                    ],
                    "onSelect": [Function],
                    "toggleProps": null,
                  }
                }
                component="section"
                customFilters={
                  Object {
                    "filter": Object {
                      "system_profile": Object {},
                    },
                    "tags": undefined,
                  }
                }
                fallback={
                  <Bullseye
                    className="pf-u-p-lg"
                  >
                    <Spinner
                      size="xl"
                    />
                  </Bullseye>
                }
                getEntities={[Function]}
                noDetail={true}
                onLoad={[Function]}
                showTags={true}
                tableProps={
                  Object {
                    "canSelectAll": false,
                    "isStickyHeader": true,
                    "onSelect": false,
                    "ouiaId": "systems-table",
                    "selectVariant": "checkbox",
                  }
                }
              >
                <BaseInvTable
                  actionsConfig={
                    Object {
                      "actions": Array [],
                    }
                  }
                  bulkSelect={
                    Object {
                      "checked": null,
                      "count": undefined,
                      "id": "notifications-system-bulk-select",
                      "isDisabled": false,
                      "items": Array [
                        Object {
                          "onClick": [Function],
                          "title": "Select none (0)",
                        },
                        Object {
                          "onClick": [Function],
                          "title": "Select page (0)",
                        },
                        Object {
                          "onClick": [Function],
                          "title": "Select all (undefined)",
                        },
                      ],
                      "onSelect": [Function],
                      "toggleProps": null,
                    }
                  }
                  component="section"
                  customFilters={
                    Object {
                      "filter": Object {
                        "system_profile": Object {},
                      },
                      "tags": undefined,
                    }
                  }
                  fallback={
                    <Bullseye
                      className="pf-u-p-lg"
                    >
                      <Spinner
                        size="xl"
                      />
                    </Bullseye>
                  }
                  getEntities={[Function]}
                  innerRef={null}
                  noDetail={true}
                  onLoad={[Function]}
                  showTags={true}
                  tableProps={
                    Object {
                      "canSelectAll": false,
                      "isStickyHeader": true,
                      "onSelect": false,
                      "ouiaId": "systems-table",
                      "selectVariant": "checkbox",
                    }
                  }
                >
                  <section
                    className="inventory"
                  >
                    <Suspense
                      fallback={
                        <Bullseye
                          className="pf-u-p-lg"
                        >
                          <Spinner
                            size="xl"
                          />
                        </Bullseye>
                      }
                    >
                      <ForwardRef
                        ErrorComponent={
                          <InventoryLoadError
                            actionsConfig={
                              Object {
                                "actions": Array [],
                              }
                            }
                            bulkSelect={
                              Object {
                                "checked": null,
                                "count": undefined,
                                "id": "notifications-system-bulk-select",
                                "isDisabled": false,
                                "items": Array [
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select none (0)",
                                  },
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select page (0)",
                                  },
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select all (undefined)",
                                  },
                                ],
                                "onSelect": [Function],
                                "toggleProps": null,
                              }
                            }
                            component="section"
                            customFilters={
                              Object {
                                "filter": Object {
                                  "system_profile": Object {},
                                },
                                "tags": undefined,
                              }
                            }
                            fallback={
                              <Bullseye
                                className="pf-u-p-lg"
                              >
                                <Spinner
                                  size="xl"
                                />
                              </Bullseye>
                            }
                            getEntities={[Function]}
                            history={
                              Object {
                                "action": "POP",
                                "block": [Function],
                                "canGo": [Function],
                                "createHref": [Function],
                                "entries": Array [
                                  Object {
                                    "hash": "",
                                    "pathname": "/",
                                    "search": "",
                                    "state": undefined,
                                  },
                                ],
                                "go": [Function],
                                "goBack": [Function],
                                "goForward": [Function],
                                "index": 0,
                                "length": 1,
                                "listen": [Function],
                                "location": Object {
                                  "hash": "",
                                  "pathname": "/",
                                  "search": "",
                                  "state": undefined,
                                },
                                "push": [Function],
                                "replace": [Function],
                              }
                            }
                            innerRef={null}
                            noDetail={true}
                            onLoad={[Function]}
                            showTags={true}
                            store={
                              Object {
                                "@@observable": [Function],
                                "dispatch": [Function],
                                "getState": [Function],
                                "replaceReducer": [Function],
                                "subscribe": [Function],
                              }
                            }
                            tableProps={
                              Object {
                                "canSelectAll": false,
                                "isStickyHeader": true,
                                "onSelect": false,
                                "ouiaId": "systems-table",
                                "selectVariant": "checkbox",
                              }
                            }
                          />
                        }
                        actionsConfig={
                          Object {
                            "actions": Array [],
                          }
                        }
                        appName="inventory"
                        bulkSelect={
                          Object {
                            "checked": null,
                            "count": undefined,
                            "id": "notifications-system-bulk-select",
                            "isDisabled": false,
                            "items": Array [
                              Object {
                                "onClick": [Function],
                                "title": "Select none (0)",
                              },
                              Object {
                                "onClick": [Function],
                                "title": "Select page (0)",
                              },
                              Object {
                                "onClick": [Function],
                                "title": "Select all (undefined)",
                              },
                            ],
                            "onSelect": [Function],
                            "toggleProps": null,
                          }
                        }
                        component="section"
                        customFilters={
                          Object {
                            "filter": Object {
                              "system_profile": Object {},
                            },
                            "tags": undefined,
                          }
                        }
                        fallback={
                          <Bullseye
                            className="pf-u-p-lg"
                          >
                            <Spinner
                              size="xl"
                            />
                          </Bullseye>
                        }
                        getEntities={[Function]}
                        history={
                          Object {
                            "action": "POP",
                            "block": [Function],
                            "canGo": [Function],
                            "createHref": [Function],
                            "entries": Array [
                              Object {
                                "hash": "",
                                "pathname": "/",
                                "search": "",
                                "state": undefined,
                              },
                            ],
                            "go": [Function],
                            "goBack": [Function],
                            "goForward": [Function],
                            "index": 0,
                            "length": 1,
                            "listen": [Function],
                            "location": Object {
                              "hash": "",
                              "pathname": "/",
                              "search": "",
                              "state": undefined,
                            },
                            "push": [Function],
                            "replace": [Function],
                          }
                        }
                        innerRef={null}
                        module="./InventoryTable"
                        noDetail={true}
                        onLoad={[Function]}
                        scope="inventory"
                        showTags={true}
                        store={
                          Object {
                            "@@observable": [Function],
                            "dispatch": [Function],
                            "getState": [Function],
                            "replaceReducer": [Function],
                            "subscribe": [Function],
                          }
                        }
                        tableProps={
                          Object {
                            "canSelectAll": false,
                            "isStickyHeader": true,
                            "onSelect": false,
                            "ouiaId": "systems-table",
                            "selectVariant": "checkbox",
                          }
                        }
                      >
                        <BaseScalprumComponent
                          ErrorComponent={
                            <InventoryLoadError
                              actionsConfig={
                                Object {
                                  "actions": Array [],
                                }
                              }
                              bulkSelect={
                                Object {
                                  "checked": null,
                                  "count": undefined,
                                  "id": "notifications-system-bulk-select",
                                  "isDisabled": false,
                                  "items": Array [
                                    Object {
                                      "onClick": [Function],
                                      "title": "Select none (0)",
                                    },
                                    Object {
                                      "onClick": [Function],
                                      "title": "Select page (0)",
                                    },
                                    Object {
                                      "onClick": [Function],
                                      "title": "Select all (undefined)",
                                    },
                                  ],
                                  "onSelect": [Function],
                                  "toggleProps": null,
                                }
                              }
                              component="section"
                              customFilters={
                                Object {
                                  "filter": Object {
                                    "system_profile": Object {},
                                  },
                                  "tags": undefined,
                                }
                              }
                              fallback={
                                <Bullseye
                                  className="pf-u-p-lg"
                                >
                                  <Spinner
                                    size="xl"
                                  />
                                </Bullseye>
                              }
                              getEntities={[Function]}
                              history={
                                Object {
                                  "action": "POP",
                                  "block": [Function],
                                  "canGo": [Function],
                                  "createHref": [Function],
                                  "entries": Array [
                                    Object {
                                      "hash": "",
                                      "pathname": "/",
                                      "search": "",
                                      "state": undefined,
                                    },
                                  ],
                                  "go": [Function],
                                  "goBack": [Function],
                                  "goForward": [Function],
                                  "index": 0,
                                  "length": 1,
                                  "listen": [Function],
                                  "location": Object {
                                    "hash": "",
                                    "pathname": "/",
                                    "search": "",
                                    "state": undefined,
                                  },
                                  "push": [Function],
                                  "replace": [Function],
                                }
                              }
                              innerRef={null}
                              noDetail={true}
                              onLoad={[Function]}
                              showTags={true}
                              store={
                                Object {
                                  "@@observable": [Function],
                                  "dispatch": [Function],
                                  "getState": [Function],
                                  "replaceReducer": [Function],
                                  "subscribe": [Function],
                                }
                              }
                              tableProps={
                                Object {
                                  "canSelectAll": false,
                                  "isStickyHeader": true,
                                  "onSelect": false,
                                  "ouiaId": "systems-table",
                                  "selectVariant": "checkbox",
                                }
                              }
                            />
                          }
                          actionsConfig={
                            Object {
                              "actions": Array [],
                            }
                          }
                          appName="inventory"
                          bulkSelect={
                            Object {
                              "checked": null,
                              "count": undefined,
                              "id": "notifications-system-bulk-select",
                              "isDisabled": false,
                              "items": Array [
                                Object {
                                  "onClick": [Function],
                                  "title": "Select none (0)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Select page (0)",
                                },
                                Object {
                                  "onClick": [Function],
                                  "title": "Select all (undefined)",
                                },
                              ],
                              "onSelect": [Function],
                              "toggleProps": null,
                            }
                          }
                          component="section"
                          customFilters={
                            Object {
                              "filter": Object {
                                "system_profile": Object {},
                              },
                              "tags": undefined,
                            }
                          }
                          fallback={
                            <Bullseye
                              className="pf-u-p-lg"
                            >
                              <Spinner
                                size="xl"
                              />
                            </Bullseye>
                          }
                          getEntities={[Function]}
                          history={
                            Object {
                              "action": "POP",
                              "block": [Function],
                              "canGo": [Function],
                              "createHref": [Function],
                              "entries": Array [
                                Object {
                                  "hash": "",
                                  "pathname": "/",
                                  "search": "",
                                  "state": undefined,
                                },
                              ],
                              "go": [Function],
                              "goBack": [Function],
                              "goForward": [Function],
                              "index": 0,
                              "length": 1,
                              "listen": [Function],
                              "location": Object {
                                "hash": "",
                                "pathname": "/",
                                "search": "",
                                "state": undefined,
                              },
                              "push": [Function],
                              "replace": [Function],
                            }
                          }
                          innerRef={null}
                          module="./InventoryTable"
                          noDetail={true}
                          onLoad={[Function]}
                          scope="inventory"
                          showTags={true}
                          store={
                            Object {
                              "@@observable": [Function],
                              "dispatch": [Function],
                              "getState": [Function],
                              "replaceReducer": [Function],
                              "subscribe": [Function],
                            }
                          }
                          tableProps={
                            Object {
                              "canSelectAll": false,
                              "isStickyHeader": true,
                              "onSelect": false,
                              "ouiaId": "systems-table",
                              "selectVariant": "checkbox",
                            }
                          }
                        >
                          <LoadModule
                            ErrorComponent={[Function]}
                            actionsConfig={
                              Object {
                                "actions": Array [],
                              }
                            }
                            appName="inventory"
                            bulkSelect={
                              Object {
                                "checked": null,
                                "count": undefined,
                                "id": "notifications-system-bulk-select",
                                "isDisabled": false,
                                "items": Array [
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select none (0)",
                                  },
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select page (0)",
                                  },
                                  Object {
                                    "onClick": [Function],
                                    "title": "Select all (undefined)",
                                  },
                                ],
                                "onSelect": [Function],
                                "toggleProps": null,
                              }
                            }
                            component="section"
                            customFilters={
                              Object {
                                "filter": Object {
                                  "system_profile": Object {},
                                },
                                "tags": undefined,
                              }
                            }
                            fallback={
                              <Bullseye
                                className="pf-u-p-lg"
                              >
                                <Spinner
                                  size="xl"
                                />
                              </Bullseye>
                            }
                            getEntities={[Function]}
                            history={
                              Object {
                                "action": "POP",
                                "block": [Function],
                                "canGo": [Function],
                                "createHref": [Function],
                                "entries": Array [
                                  Object {
                                    "hash": "",
                                    "pathname": "/",
                                    "search": "",
                                    "state": undefined,
                                  },
                                ],
                                "go": [Function],
                                "goBack": [Function],
                                "goForward": [Function],
                                "index": 0,
                                "length": 1,
                                "listen": [Function],
                                "location": Object {
                                  "hash": "",
                                  "pathname": "/",
                                  "search": "",
                                  "state": undefined,
                                },
                                "push": [Function],
                                "replace": [Function],
                              }
                            }
                            innerRef={null}
                            module="./InventoryTable"
                            noDetail={true}
                            onLoad={[Function]}
                            scope="inventory"
                            showTags={true}
                            store={
                              Object {
                                "@@observable": [Function],
                                "dispatch": [Function],
                                "getState": [Function],
                                "replaceReducer": [Function],
                                "subscribe": [Function],
                              }
                            }
                            tableProps={
                              Object {
                                "canSelectAll": false,
                                "isStickyHeader": true,
                                "onSelect": false,
                                "ouiaId": "systems-table",
                                "selectVariant": "checkbox",
                              }
                            }
                          >
                            <Suspense
                              fallback={
                                <Bullseye
                                  className="pf-u-p-lg"
                                >
                                  <Spinner
                                    size="xl"
                                  />
                                </Bullseye>
                              }
                            >
                              <_default
                                actionsConfig={
                                  Object {
                                    "actions": Array [],
                                  }
                                }
                                bulkSelect={
                                  Object {
                                    "checked": null,
                                    "count": undefined,
                                    "id": "notifications-system-bulk-select",
                                    "isDisabled": false,
                                    "items": Array [
                                      Object {
                                        "onClick": [Function],
                                        "title": "Select none (0)",
                                      },
                                      Object {
                                        "onClick": [Function],
                                        "title": "Select page (0)",
                                      },
                                      Object {
                                        "onClick": [Function],
                                        "title": "Select all (undefined)",
                                      },
                                    ],
                                    "onSelect": [Function],
                                    "toggleProps": null,
                                  }
                                }
                                component="section"
                                customFilters={
                                  Object {
                                    "filter": Object {
                                      "system_profile": Object {},
                                    },
                                    "tags": undefined,
                                  }
                                }
                                getEntities={[Function]}
                                history={
                                  Object {
                                    "action": "POP",
                                    "block": [Function],
                                    "canGo": [Function],
                                    "createHref": [Function],
                                    "entries": Array [
                                      Object {
                                        "hash": "",
                                        "pathname": "/",
                                        "search": "",
                                        "state": undefined,
                                      },
                                    ],
                                    "go": [Function],
                                    "goBack": [Function],
                                    "goForward": [Function],
                                    "index": 0,
                                    "length": 1,
                                    "listen": [Function],
                                    "location": Object {
                                      "hash": "",
                                      "pathname": "/",
                                      "search": "",
                                      "state": undefined,
                                    },
                                    "push": [Function],
                                    "replace": [Function],
                                  }
                                }
                                noDetail={true}
                                onLoad={[Function]}
                                showTags={true}
                                store={
                                  Object {
                                    "@@observable": [Function],
                                    "dispatch": [Function],
                                    "getState": [Function],
                                    "replaceReducer": [Function],
                                    "subscribe": [Function],
                                  }
                                }
                                tableProps={
                                  Object {
                                    "canSelectAll": false,
                                    "isStickyHeader": true,
                                    "onSelect": false,
                                    "ouiaId": "systems-table",
                                    "selectVariant": "checkbox",
                                  }
                                }
                              >
                                <div>
                                  <h1>
                                    Inventory mock
                                  </h1>
                                </div>
                              </_default>
                            </Suspense>
                          </LoadModule>
                        </BaseScalprumComponent>
                      </ForwardRef>
                    </Suspense>
                  </section>
                </BaseInvTable>
              </ForwardRef>
            </Component>
          </Connect(Component)>
        </Provider>
      </SystemsTableWithContext>
    </Provider>
  </Router>
</MemoryRouter>
`;
